; ModuleID = '/home/carl/AnghaBench/curl/lib/vauth/extr_cleartext.c_Curl_auth_create_external_message.c'
source_filename = "/home/carl/AnghaBench/curl/lib/vauth/extr_cleartext.c_Curl_auth_create_external_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_auth_create_external_message(%struct.Curl_easy* %0, i8* %1, i8** %2, i64* %3) #0 {
  %5 = alloca %struct.Curl_easy*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i64*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8** %2, i8*** %7, align 8
  store i64* %3, i64** %8, align 8
  %9 = load %struct.Curl_easy*, %struct.Curl_easy** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i8**, i8*** %7, align 8
  %12 = load i64*, i64** %8, align 8
  %13 = call i32 @Curl_auth_create_login_message(%struct.Curl_easy* %9, i8* %10, i8** %11, i64* %12)
  ret i32 %13
}

declare dso_local i32 @Curl_auth_create_login_message(%struct.Curl_easy*, i8*, i8**, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
